Bug 1366890 - Remove border-radius from overflow buttons. r=dao
MozReview-Commit-ID: 5zXnEqi37tJ

UltraBlame original commit: 14fa5171a8ec70e436d9fef5723feb7304053516

--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -1029,6 +1029,32 @@ radius
 0
 ;
 }
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+scrollbutton
+-
+up
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+scrollbutton
+-
+down
+{
+border
+-
+radius
+:
+0
+;
+}
 #
 navigator
 -
